# taida

./: .gitignore  CMakeLists.txt  Taida.qmlproject  Taida.qmlproject.qtds  Taida.qrc  qds.cmake
App/: CMakeLists.txt  main.cpp
App/autogen/: environment.h
Core/: CMakeLists.txt  RESTManager.cpp  RESTManager.h  SqlManager.cpp  SqlManager.h  TdProxy.h  clientWorker.cpp  clientWorker.h  core.cpp  core.h  data_schema.sql  manager.cpp  manager.h  ms300.cpp  ms300.h  serverWorker.cpp  serverWorker.h  settings_schema.sql  settings_schema_0528_backup.sql
Taida/: CMakeLists.txt  Constants.qml  qmldir
Taida/designer/: plugin.metainfo
TaidaContent/: App.qml  CMakeLists.txt  ConnectionSettings.qml  MainScreen.qml  MainScreenUI.ui.qml  Screen01.ui.qml
